add swagger routes
